ZCS-8339: Compiling zm-mailbox against JDK13