@@ -16,6 +16,7 @@
  */
 package com.zimbra.cs.service.authenticator;
 
+import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.FileOutputStream;
@@ -34,6 +35,7 @@ import java.security.cert.CertificateNotYetValidException;
 import java.security.cert.TrustAnchor;
 import java.security.cert.X509Certificate;
 import java.text.SimpleDateFormat;
+import java.util.Base64;
 import java.util.Date;
 import java.util.List;
 import java.util.Set;
@@ -43,6 +45,11 @@ import javax.naming.ldap.LdapName;
 import javax.naming.ldap.Rdn;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
+
+import org.bouncycastle.asn1.ASN1InputStream;
+import org.bouncycastle.asn1.DEROctetString;
+import org.bouncycastle.asn1.x509.AuthorityInformationAccess;
+import org.bouncycastle.asn1.x509.X509Extension;
 
 import com.zimbra.common.account.Key.AccountBy;
 import com.zimbra.common.localconfig.DebugConfig;
@@ -55,9 +62,6 @@ import com.zimbra.cs.account.AccountServiceException.AuthFailedServiceException;
 import com.zimbra.cs.account.Provisioning;
 import com.zimbra.cs.service.authenticator.ClientCertPrincipalMap.Rule;
 import com.zimbra.cs.util.CertValidationUtil;
-
-import sun.security.x509.AuthorityInfoAccessExtension;
-import sun.security.x509.X509CertImpl;
 
 public class ClientCertAuthenticator extends SSOAuthenticator {
 
@@ -120,7 +124,7 @@ public class ClientCertAuthenticator extends SSOAuthenticator {
             // Write in text form
             wr = new OutputStreamWriter(os, Charset.forName("UTF-8"));
             wr.write("-----BEGIN CERTIFICATE-----\n");
-            wr.write(new sun.misc.BASE64Encoder().encode(buf));
+            wr.write(Base64.getEncoder().encodeToString(buf));
             wr.write("\n-----END CERTIFICATE-----\n");
             wr.flush();
         } catch (CertificateEncodingException e) {
@@ -218,13 +222,21 @@ public class ClientCertAuthenticator extends SSOAuthenticator {
     // examine the certificate's AuthorityInfoAccess extension
     private boolean IsAIAInfoPresent(X509Certificate cert) {
         try {
-            AuthorityInfoAccessExtension aia =
-                            X509CertImpl.toImpl(cert).getAuthorityInfoAccessExtension();
-            return  (aia != null);
-        } catch (CertificateException ce) {
+            byte[] authInfoAccessExtensionValue = cert
+                    .getExtensionValue(X509Extension.authorityInfoAccess.getId());
+            ASN1InputStream ais1 = new ASN1InputStream(
+                new ByteArrayInputStream(authInfoAccessExtensionValue));
+            DEROctetString oct = (DEROctetString) (ais1.readObject());
+            ASN1InputStream ais2 = new ASN1InputStream(oct.getOctets());
+            AuthorityInformationAccess aia = AuthorityInformationAccess
+                .getInstance(ais2.readObject());
+            ais1.close();
+            ais2.close();
+            return (aia != null);
+        } catch (IOException ce) {
             // treat this case as if the cert had no extension
             return false;
-            }
+        }
     }
 
 }
